// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FD Panel should render correctly 1`] = `
<div
  className="sc-bdVaJa bZwGnE"
/>
`;

exports[`FD Panel should render correctly 2`] = `
<div
  className="sc-bdVaJa kLEhFx"
/>
`;
